Assembly Line Attempts